prow/test/integration/config/prow/cluster/fakegitserver.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: default
  name: fakegitserver
  labels:
    app: fakegitserver
spec:
  selector:
    matchLabels:
      app: fakegitserver
  replicas: 1
  template:
    metadata:
      labels:
        app: fakegitserver
    spec:
      containers:
      - name: fakegitserver
        image: localhost:5001/fakegitserver
        ports:
        - containerPort: 8888
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: fakegitserver
  namespace: default
  name: fakegitserver
spec:
  ports:
  - name: main
    port: 80
    protocol: TCP
    targetPort: 8888
  - name: metrics
    port: 9090
    protocol: TCP
  selector:
    app: fakegitserver
  type: ClusterIP
