prow/test/integration/config/prow/cluster/gangway_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gangway
  namespace: default
  labels:
    app: gangway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gangway
  template:
    metadata:
      labels:
        app: gangway
    spec:
      # FIXME (listx): serve readiness and liveness probes in the gangway binary
      # (and configure them here).

      # FIXME (listx): adjust terminationGracePeriodSeconds to be greater thant
      # he graceful shutdown period to be set with the interrupts package.
      terminationGracePeriodSeconds: 1
      serviceAccountName: gangway
      containers:
      - name: gangway
        image: localhost:5001/gangway
        args:
        - --config-path=/etc/config/config.yaml
        - --job-config-path=/etc/job-config
        - --grace-period=110s
        # This cookie file is only here to trigger the creation of a
        # Gerrit-flavored Git client factory. So this makes this gangway deployment
        # "tied" to Gerrit.
        #
        # TODO (listx): Allow gangway to be deployed with access to multiple
        # GitHub/Gerrit credentials (and make it know which one to use based on
        # the org/repo name). We can't simply deploy a 2nd gangway deployment
        # configured with GitHub creds to test that codepath because currently
        # gangway will always choose one or the other.
        - --cookiefile=/etc/cookies/cookies
        - --dry-run=false
        ports:
        - name: grpc
          containerPort: 32000
        - name: http
          containerPort: 80
        - name: metrics
          containerPort: 9090
        volumeMounts:
        - name: cookies
          mountPath: /etc/cookies
          readOnly: true
        - name: config
          mountPath: /etc/config
          readOnly: true
        - name: job-config
          mountPath: /etc/job-config
          readOnly: true
        resources:
          requests:
            cpu: "1"
            memory: "2Gi"
        env:
        # When cloning from an inrepoconfig repo, don't bother verifying certs.
        # This allows us to use "https://..." addresses to fakegitserver.
        - name: GIT_SSL_NO_VERIFY
          value: "1"
      volumes:
      - name: cookies
        secret:
          defaultMode: 420
          secretName: http-cookiefile
      - name: config
        configMap:
          name: config
      - name: job-config
        configMap:
          name: job-config
      tolerations:
      - key: "prowcomponent"
        operator: "Equal"
        value: "true"
        effect: "NoSchedule"
