prow/test/integration/config/prow/cluster/gangway_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gangway
  namespace: default
spec:
  selector:
    app: gangway
  ports:
  - port: 32000
    targetPort: 32000
    nodePort: 32000
    protocol: TCP
    name: grpc
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  type: NodePort
