prow/test/integration/config/prow/cluster/moonraker_deployment.yaml
apiVersion: apps/v1
# In production, Moonraker should be deployed as a StatefulSet so that its Git
# repos that it clones can be persisted across deployments. But for integration
# tests, this is not necessary because we bring up the entire cluster from
# scratch.
kind: Deployment
metadata:
  namespace: default
  name: moonraker
  labels:
    app: moonraker
spec:
  selector:
    matchLabels:
      app: moonraker
  replicas: 1
  template:
    metadata:
      labels:
        app: moonraker
    spec:
      # For development and CI, we don't care that much about graceful shutdown,
      # so use 5 seconds to override the default of 25.
      terminationGracePeriodSeconds: 5
      serviceAccountName: moonraker
      containers:
      - name: moonraker
        image: localhost:5001/moonraker
        args:
        - --config-path=/etc/config/config.yaml
        - --job-config-path=/etc/job-config
        # This cookie file is only here to trigger the creation of a
        # Gerrit-flavored Git client factory. So this makes this moonraker deployment
        # "tied" to Gerrit.
        #
        # TODO (listx): Allow moonraker to be deployed with access to multiple
        # GitHub/Gerrit credentials (and make it know which one to use based on
        # the org/repo name). We can't simply deploy a 2nd moonraker deployment
        # configured with GitHub creds to test that codepath because currently
        # moonraker will always choose one or the other.
        - --cookiefile=/etc/cookies/cookies
        ports:
        - name: http
          containerPort: 8080
        - name: metrics
          containerPort: 9090
        volumeMounts:
        - name: cookies
          mountPath: /etc/cookies
          readOnly: true
        - name: config
          mountPath: /etc/config
          readOnly: true
        - name: job-config
          mountPath: /etc/job-config
          readOnly: true
        - name: git-config-system
          mountPath: /etc/git-config-system
          readOnly: true
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8081
          initialDelaySeconds: 3
          periodSeconds: 3
        readinessProbe:
          httpGet:
            path: /healthz/ready
            port: 8081
          initialDelaySeconds: 10
          periodSeconds: 3
          timeoutSeconds: 600
        env:
        # When cloning from an inrepoconfig repo, don't bother verifying certs.
        # This allows us to use "https://..." addresses to fakegitserver.
        - name: GIT_SSL_NO_VERIFY
          value: "1"
        - name: GIT_CONFIG_SYSTEM
          value: /etc/git-config-system/config
      volumes:
      - name: cookies
        secret:
          defaultMode: 420
          secretName: http-cookiefile
      - name: config
        configMap:
          name: config
      - name: job-config
        configMap:
          name: job-config
      - name: git-config-system
        configMap:
          name: git-config-system
