prow/test/integration/config/prow/cluster/sub.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sub
  namespace: default
  labels:
    app: sub
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sub
  template:
    metadata:
      labels:
        app: sub
    spec:
      terminationGracePeriodSeconds: 120
      serviceAccountName: sub
      containers:
      - name: sub
        image: localhost:5001/sub
        args:
        - --config-path=/etc/config/config.yaml
        - --job-config-path=/etc/job-config
        - --grace-period=110s
        - --dry-run=false
        ports:
        - name: http
          containerPort: 80
        - name: metrics
          containerPort: 9090
        volumeMounts:
        - name: config
          mountPath: /etc/config
          readOnly: true
        - name: job-config
          mountPath: /etc/job-config
          readOnly: true
        resources:
          requests:
            cpu: "1"
            memory: "2Gi"
        # Make sub use the Pub/Sub emulator running in the fakepubsub service.
        env:
        - name: PUBSUB_EMULATOR_HOST
          value: fakepubsub.default:80
      volumes:
      - name: config
        configMap:
          name: config
      - name: job-config
        configMap:
          name: job-config
      tolerations:
      - key: "prowcomponent"
        operator: "Equal"
        value: "true"
        effect: "NoSchedule"
---
apiVersion: v1
kind: Service
metadata:
  name: sub
  namespace: default
spec:
  selector:
    app: sub
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  type: NodePort
---
apiVersion: v1
kind: ServiceAccount
metadata:
  name: sub
  namespace: default
---
kind: Role
apiVersion: rbac.authorization.k8s.io/v1
metadata:
  name: sub
rules:
  - apiGroups:
      - prow.k8s.io
    resources:
      - prowjobs
    verbs:
      - create
      - get
      - list
      - update
---
kind: RoleBinding
apiVersion: rbac.authorization.k8s.io/v1
metadata:
  name: sub
roleRef:
  apiGroup: rbac.authorization.k8s.io
  kind: Role
  name: sub
subjects:
- kind: ServiceAccount
  name: sub
